# VoxelEngine

./: CMakeLists.txt  main.cpp  main_test.cpp
class/gameplay/: player.cpp  player.h
class/utility/graphics/: buffer.cpp  buffer.h  openGL_related.cpp  openGL_related.h  screen.cpp  screen.h
class/utility/math/: vector3.cpp  vector3.h
class/world/: chunk.cpp  chunk.h  materials.cpp  materials.h  world.cpp  world.h  world_broken.cpp  world_broken.h  world_generator.cpp  world_generator.h
class/world/backup/: world copy.cpp
mingw_stdthreads/: mingw.future.h  mingw.mutex.h  mingw.thread.h
shader/: color.css  julia.frag  spheres.frag  sponge.frag  step_rendering.frag  temperature.frag  test old.frag  test.frag  top_view.frag  vertex.vert
